--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,6 +80,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="PickUp Object",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Throw Object",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="RotateObjectZ",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
++ActionMappings=(ActionName="RotateObjectY",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="RotateObjectX",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
 +AxisMappings=(AxisName="MoveForward/Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward/Backward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveLeft/Right",Scale=-1.000000,Key=A)
