Added Main Menu and Win Screen Assets and Functionality

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/GravityGun.GravityGun
-EditorStartupMap=/Game/Maps/GravityGun.GravityGun
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
