--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,10 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=919E70B843D5CFEDF03FC0B8E7225436
+ProjectName=Gravity Gun
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+ForDistribution=False
+FullRebuild=True
+
