Added Ballista Rotation

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,6 +83,11 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="RotateObjectZ",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
 +ActionMappings=(ActionName="RotateObjectY",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +ActionMappings=(ActionName="RotateObjectX",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
++ActionMappings=(ActionName="BallistaRotateLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
++ActionMappings=(ActionName="BallistaRotateRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Right)
++ActionMappings=(ActionName="BallistaRotateUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
++ActionMappings=(ActionName="BallistaRotateDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
++ActionMappings=(ActionName="BallistaFire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
 +AxisMappings=(AxisName="MoveForward/Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward/Backward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveLeft/Right",Scale=-1.000000,Key=A)
