Added Hud elements with trigger colliders to both levels, Added ballista shot power manipulation

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -88,6 +88,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="BallistaRotateUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
 +ActionMappings=(ActionName="BallistaRotateDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
 +ActionMappings=(ActionName="BallistaFire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
++ActionMappings=(ActionName="PowerIncrease",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="PowerDecrease",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=O)
 +AxisMappings=(AxisName="MoveForward/Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward/Backward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveLeft/Right",Scale=-1.000000,Key=A)
